# prompt-engineer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  DOCKER.md  Dockerfile  GEMINI.md  README.md  ROADMAP.md  app.py  app_old.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_architecture.py
.github/workflows/: docker-publish.yml
app/prompts/: system-testing.txt  user-testing.txt
app/prompts/vars/: data_analysis.vars  testing.yaml
archive/src/prompt_engineer/config/: settings.py
archive/src/prompt_engineer/providers/: base.py
archive/src/prompt_engineer/templates/: models.py  resolver.py
archive/src/prompt_engineer/workspace/: config.py
docs/: README.md  architecture.rst  conf.py  configuration.rst  index.rst  installation.rst  quickstart.rst
docs/api/: app.rst  config.rst  llm.rst  modules.rst  prompts.rst
examples/templates/: data_analysis.txt  technical_spec.txt
examples/templates/nested/: sample.txt
examples/variables/: sample_code.py  sample_data.md
prompt_engineer/: app.py  config.py  prompts.py
src/prompt_engineer/: __init__.py  app.py  config.py  llm.py  prompts.py
src/prompt_engineer/config/: settings.py
src/prompt_engineer/providers/: openai.py  registry.py
src/prompt_engineer/templates/: parser.py
src/prompt_engineer/workspace/: config.py  discovery.py  workspace.py
templates/: code_review.txt  content_writer.txt  customer_support.txt  data_analyst.txt  product_announcement.txt  product_announcement.vars  technical_spec.vars
tests/: __init__.py  conftest.py  test_config.py  test_llm.py  test_prompts.py
utilities/: README.md
variables/: sample_context.md  sample_requirements.yaml
