[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-engineer"
version = "0.1.0"
description = "CLI-based developer workbench for rapid AI prompt engineering iteration"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "The Kitchen Coder"}]
license = {text = "MIT"}
dependencies = [
    "gradio>=6.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
prompt-engineer = "prompt_engineer.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["prompt_engineer*"]
