[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-engineer"
version = "0.1.0"
description = "CLI-based developer workbench for rapid AI prompt engineering iteration"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "The Kitchen Coder"}]
license = {text = "MIT"}
dependencies = [
    "gradio>=6.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx_rtd_theme>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "sphinx>=7.0.0",
    "sphinx_rtd_theme>=2.0.0",
]

[project.scripts]
prompt-engineer = "prompt_engineer.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["prompt_engineer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=prompt_engineer --cov-report=term-missing --cov-report=html"
